# templiqx

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  blume.config.ts  justfile  package-lock.json  package.json
.claude/skills/: author-templiqx-contracts  test-templiqx-packages  use-templiqx
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docs.yml  fresh-clone.yml  fresh-clone.yml.disabled  openwiki-update.yml  release.yml
.qlty/: .gitignore  qlty.toml
.qlty/hooks/: pre-push.sh
adapters/templiqx-docx-v5/: Cargo.toml  README.md
adapters/templiqx-docx-v5/src/: lib.rs
adapters/templiqx-html-plain/: Cargo.toml  README.md
adapters/templiqx-markdown/: Cargo.toml
adapters/templiqx-markdown/src/: lib.rs
adapters/templiqx-rtf/: Cargo.toml
adapters/templiqx-runtime-http-mock/: Cargo.toml  README.md
adapters/templiqx-runtime-http-mock/src/: lib.rs  tests.rs
adapters/templiqx-runtime-langfuse/: Cargo.toml  README.md
adapters/templiqx-runtime-langfuse/src/: lib.rs  tests.rs
adapters/templiqx-tabular/: Cargo.toml
adapters/templiqx-typst/: Cargo.toml
adapters/templiqx-typst/src/: lib.rs
adapters/templiqx-xlsx/: Cargo.toml
adapters/templiqx-xlsx/src/: lib.rs
charts/templiqx/: Chart.yaml  README.md  values-mock.yaml  values.yaml
crates/templiqx-application/: Cargo.toml
crates/templiqx-application/src/: authorized_context.rs  lib.rs  quality.rs
crates/templiqx-application/tests/: authorized_context.rs  document_authorization.rs  document_inspection.rs  includes.rs  package_dependencies.rs  package_signing.rs  quality_proposals.rs
crates/templiqx-cli/: Cargo.toml
crates/templiqx-cli/src/: main.rs
crates/templiqx-cli/tests/: workspace.rs
crates/templiqx-conformance/: Cargo.toml
crates/templiqx-conformance/src/: lib.rs
crates/templiqx-conformance/tests/: agent_native.rs  crm3.rs  crm3_actor_boundary.rs  crm3_failures.rs  cross_opco_outputs.rs  cross_opco_packages.rs  document_inspection.rs  html_render.rs  http_gateway.rs  legal_docx.rs  markdown_render.rs  pdf_render.rs  portability.rs  quality_proposals.rs  reference_package_claims.rs  report_bench.rs  report_definition.rs  rtf_render.rs  streaming.rs  typst_render.rs  xlsx_render.rs
crates/templiqx-contracts/: Cargo.toml
crates/templiqx-contracts/src/: lib.rs  quality.rs
crates/templiqx-contracts/tests/: quality_protocol.rs
crates/templiqx-core/: Cargo.toml
crates/templiqx-core/src/: lib.rs  quality.rs
crates/templiqx-core/tests/: filters.rs  quality_assessment.rs  tool_contract_refs.rs
crates/templiqx-http/: Cargo.toml
crates/templiqx-http-server/: Cargo.toml
crates/templiqx-http-server/src/: main.rs
crates/templiqx-http/src/: lib.rs
crates/templiqx-http/tests/: boundaries.rs  http_parity.rs  http_routes.rs  http_transport_failures.rs  openapi_drift.rs  swagger_ui.rs
crates/templiqx-local/: Cargo.toml
crates/templiqx-local/src/: fake_data_access.rs  lib.rs
crates/templiqx-local/tests/: service.rs
crates/templiqx-mcp/: Cargo.toml
crates/templiqx-mcp/src/: lib.rs  main.rs
crates/templiqx-mcp/tests/: stdio.rs  workspace.rs
crates/templiqx-mock/: Cargo.toml
crates/templiqx-mock/src/: lib.rs
crates/templiqx-ports/: Cargo.toml
deploy/: compose.yml
docs/: README.md  index.mdx  meta.ts  wiki
docs/adr/: compiled-artifact-cache.md  document-conversion.md  high-complexity-rust-modules.md  http-server-release-artifact.md  legacy-template-import.md  meta.ts  odt-compatibility.md  overview.md  package-trust.md  quality-evidence-protocol.md  streaming-runtime-port.md  tool-contract-refs.md
docs/architecture/: adr-odt-compatibility.md  adr-operations-http-api.md  adr-package-trust.md  adr-streaming-runtime-port.md  adr-tool-contract-refs.md  capability-map.md  deployment.md  meta.ts  observability.md  poc.md  poc.mdx
docs/audits/: 2026-07-12-agent-native-architecture-review.md  2026-07-13-agent-native-architecture-review-v2.md  2026-07-15-qlty-smells-findings.md  meta.ts
docs/brainstorms/: 2026-07-11-templiqx-ai-native-template-engine-poc-requirements.md  2026-07-12-templiqx-best-in-class-template-engine-gap-analysis.md  2026-07-15-templiqx-cross-opco-breadth-requirements.md
docs/contracts/: cross-opco-reference-packages-v1alpha1.md  document-inspection-v1alpha1.md  evidence-fragment-v1alpha1.md  merge-data-v1alpha1.md  meta.ts  mock-scenarios-v1alpha1.md  package-translations-v1alpha1.md  quality-proposals-v1alpha1.md  report-definition-v1alpha1.md  (+2 more)
examples_we _must_support/: Dossiervoorblad.docx  xls OHW per kostenplaats.xls
openapi/: compatibility-matrix.yaml  templiqx-operations-v1.yaml
openwiki/: .last-update.json  _plan.md  architecture.md  architecture.mdx  domains.md  domains.mdx  meta.ts  quickstart.md  testing.md  workflows.md  workflows.mdx
scripts/: bump-engine-version.mjs  check-boundaries.sh  check-ci-gates.sh  docker-smoke.sh  fresh-clone-verify.sh  kind-smoke.sh  release-validate.sh  release-verify-oci.sh  supply-chain-smoke.sh  verify-packaged-chart.sh  verify-sdks.sh
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/scripts/: generate.py
sdk/python/src/templiqx_adapter/: __init__.py  client.py  compat.py  errors.py
sdk/python/src/templiqx_adapter/_generated/: __init__.py  operations_v1.py
sdk/python/tests/: test_client.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/codegen/: generate.rs
sdk/rust/scripts/: check-generated.sh  generate.sh
sdk/rust/src/: client.rs  compat.rs  errors.rs  generated.rs  lib.rs
sdk/rust/tests/: client.rs  integration.rs
specs/: pre-crm3-readiness-docker-kubernetes.html
tools/templiqx-bench/: Cargo.toml  README.md
tools/templiqx-bench/src/: lib.rs  main.rs  report_determinism.rs  report_fanout.rs
tools/templiqx-http-conformance/: Cargo.toml
tools/templiqx-http-conformance/src/: main.rs
tools/templiqx-legacy-docx-fixtures/: Cargo.toml
tools/templiqx-legacy-docx-fixtures/src/: main.rs
tools/templiqx-mock-gateway/: Cargo.toml
tools/templiqx-mock-gateway/src/: main.rs
(+156 files in other folders)
