[workspace]
members = [
  "crates/templiqx-contracts",
  "crates/templiqx-ports",
  "crates/templiqx-core",
  "crates/templiqx-application",
  "crates/templiqx-local",
  "crates/templiqx-mock",
  "crates/templiqx-cli",
  "crates/templiqx-mcp",
  "crates/templiqx-conformance",
  "adapters/templiqx-docx-v5",
  "adapters/templiqx-runtime-http-mock",
  "adapters/templiqx-runtime-langfuse",
  "tools/templiqx-mock-gateway",
  "tools/templiqx-http-conformance",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
fs2 = "0.4.3"
jsonschema = { version = "0.47.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
semver = "1.0.28"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
