[workspace]
exclude = ["sdk/rust"]
members = [
  "crates/templiqx-contracts",
  "crates/templiqx-ports",
  "crates/templiqx-core",
  "crates/templiqx-application",
  "crates/templiqx-local",
  "crates/templiqx-http",
  "crates/templiqx-http-server",
  "crates/templiqx-mock",
  "crates/templiqx-cli",
  "crates/templiqx-mcp",
  "crates/templiqx-conformance",
  "adapters/templiqx-docx-v5",
  "adapters/templiqx-html-plain",
  "adapters/templiqx-runtime-http-mock",
  "adapters/templiqx-runtime-langfuse",
  "adapters/templiqx-typst",
  "adapters/templiqx-xlsx",
  "adapters/templiqx-tabular",
  "adapters/templiqx-markdown",
  "adapters/templiqx-rtf",
  "tools/templiqx-mock-gateway",
  "tools/templiqx-http-conformance",
  "tools/templiqx-legacy-docx-fixtures",
  "tools/templiqx-bench",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"
description = "Provider-neutral AI interaction contract compiler and conformance toolkit"
repository = "https://github.com/RyanLisse/templiqx"
homepage = "https://github.com/RyanLisse/templiqx"

[workspace.dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
fs2 = "0.4.3"
jsonschema = { version = "0.47.0", default-features = false }
markdown = "1.0.0"
rust_xlsxwriter = "0.96.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
semver = "1.0.28"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tower = { version = "0.5.2", features = ["timeout", "util"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
axum = { version = "0.8.7", features = ["tokio", "http1", "json"] }
utoipa = "5.5.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
