[package]
name = "templiqx-typst"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde_json = { workspace = true }
templiqx-ports = { path = "../../crates/templiqx-ports" }
thiserror = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
