[package]
name = "templiqx-xlsx"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rust_xlsxwriter.workspace = true
serde_json.workspace = true
sha2.workspace = true
templiqx-ports = { path = "../../crates/templiqx-ports" }
thiserror.workspace = true

[lints]
workspace = true
