[package]
name = "templiqx-application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
templiqx-contracts = { path = "../templiqx-contracts" }
templiqx-core = { path = "../templiqx-core" }
templiqx-ports = { path = "../templiqx-ports" }
serde.workspace = true
serde_json.workspace = true
semver.workspace = true

[lints]
workspace = true
