[package]
name = "templiqx-application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
templiqx-contracts = { path = "../templiqx-contracts" }
templiqx-core = { path = "../templiqx-core" }
templiqx-ports = { path = "../templiqx-ports" }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
semver.workspace = true
sha2.workspace = true
hex.workspace = true
base64 = { workspace = true }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
templiqx-local = { path = "../templiqx-local" }
templiqx-contracts = { path = "../templiqx-contracts" }
templiqx-ports = { path = "../templiqx-ports" }
tempfile.workspace = true
serde_yaml_ng.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[lints]
workspace = true
