[package]
name = "templiqx-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
templiqx-application = { path = "../templiqx-application" }
templiqx-contracts = { path = "../templiqx-contracts" }
templiqx-local = { path = "../templiqx-local" }
templiqx-ports = { path = "../templiqx-ports" }
templiqx-docx-v5 = { path = "../../adapters/templiqx-docx-v5" }

[dev-dependencies]
anyhow.workspace = true
rmcp = { version = "2.2.0", default-features = false, features = ["client", "macros", "schemars", "transport-async-rw"] }
tempfile.workspace = true
templiqx-mock = { path = "../templiqx-mock" }
templiqx-runtime-http-mock = { path = "../../adapters/templiqx-runtime-http-mock" }
templiqx-html-plain = { path = "../../adapters/templiqx-html-plain" }
templiqx-mcp = { path = "../templiqx-mcp" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
zip = { version = "8.6", default-features = false, features = ["deflate"] }

[lints]
workspace = true
