[package]
name = "templiqx-http-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "templiqx-http-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
templiqx-application = { path = "../templiqx-application" }
templiqx-http = { path = "../templiqx-http" }
templiqx-local = { path = "../templiqx-local" }
templiqx-ports = { path = "../templiqx-ports" }
templiqx-runtime-langfuse = { path = "../../adapters/templiqx-runtime-langfuse" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
