[package]
name = "templiqx-http"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
templiqx-application = { path = "../templiqx-application" }
templiqx-contracts = { path = "../templiqx-contracts" }
templiqx-local = { path = "../templiqx-local" }
templiqx-ports = { path = "../templiqx-ports" }
tokio.workspace = true
tower.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
