[package]
name = "templiqx-http"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
templiqx-application = { path = "../templiqx-application" }
templiqx-contracts = { path = "../templiqx-contracts" }
templiqx-local = { path = "../templiqx-local" }
templiqx-ports = { path = "../templiqx-ports" }
serde_yaml_ng.workspace = true
tokio.workspace = true
tower.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true
tempfile.workspace = true

[lints]
workspace = true
