[package]
name = "templiqx-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
rmcp = { version = "2.2.0", default-features = false, features = ["server", "macros", "schemars", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
templiqx-application = { path = "../templiqx-application" }
templiqx-contracts = { path = "../templiqx-contracts" }
templiqx-local = { path = "../templiqx-local" }
templiqx-ports = { path = "../templiqx-ports" }
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread"] }

[dev-dependencies]
rmcp = { version = "2.2.0", default-features = false, features = ["client", "macros", "schemars", "transport-async-rw"] }
tempfile.workspace = true

[lints]
workspace = true
