[package]
name = "templiqx-mock"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
templiqx-contracts = { path = "../templiqx-contracts" }
templiqx-ports = { path = "../templiqx-ports" }
thiserror.workspace = true

[lints]
workspace = true
