[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "templiqx-adapter"
version = "0.2.0"
description = "Thin Python transport adapter for the Templiqx Operations API"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "../../LICENSE" }
authors = [{ name = "Blinqx" }]
dependencies = [
  "httpx>=0.28.1,<1",
  "pydantic>=2,<3",
]

[dependency-groups]
dev = [
  "datamodel-code-generator==0.68.1",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pyyaml==6.0.3",
]

[tool.uv]
required-version = "==0.11.24"

[tool.hatch.build.targets.wheel]
packages = ["src/templiqx_adapter"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
