[package]
name = "templiqx-adapter-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Thin async Rust client for the Templiqx Operations HTTP API"
repository = "https://github.com/RyanLisse/templiqx"

[dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
prettyplease = "=0.2.37"
quote = "=1.0.45"
schemars = "=0.8.22"
serde_yaml = "=0.9.34"
sha2 = "=0.10.9"
syn = { version = "=2.0.117", features = ["full"] }
tempfile = "=3.27.0"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread", "net", "process", "time"] }
typify = { version = "=0.7.0", default-features = false }
wiremock = "=0.6.5"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[[example]]
name = "generate"
path = "codegen/generate.rs"
