[package]
name = "templiqx-legacy-docx-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde_json.workspace = true
tempfile.workspace = true
zip = { version = "8.6", default-features = false, features = ["deflate"] }

[lints]
workspace = true
